<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ocielgp</groupId>
    <artifactId>armstrong-desktop</artifactId>
    <version>1.3</version>
    <packaging>jar</packaging>

    <properties>
        <!-- global config -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jdk.version>11</jdk.version>
        <mainClass>app/com.ocielgp.RunApp</mainClass>
        <mainClass.jar>com.ocielgp.RunAppJar</mainClass.jar>

        <!-- dependencies -->
        <javafx.version>18.0.2</javafx.version>
        <jfoenix.version>9.0.10</jfoenix.version>
        <ikonli.version>12.3.1</ikonli.version>
        <mysql.version>8.0.30</mysql.version>
        <hikariCP.version>5.0.1</hikariCP.version>
        <jSerialComm.version>2.9.2</jSerialComm.version>
        <slf4j.version>2.0.0</slf4j.version>

        <!-- plugins -->
        <mavenCompiler.version>3.10.1</mavenCompiler.version>
        <mavenResources.version>3.3.0</mavenResources.version>
        <javafxMaven.version>0.0.8</javafxMaven.version>
        <mavenShade.version>3.3.0</mavenShade.version>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>${jfoenix.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${ikonli.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-material-pack -->
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-material-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikariCP.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
        <dependency>
            <groupId>com.fazecast</groupId>
            <artifactId>jSerialComm</artifactId>
            <version>${jSerialComm.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/resources/fonts</directory>
            </resource>
            <resource>
                <directory>src/main/resources/img</directory>
            </resource>
            <resource>
                <directory>src/main/resources/utilities</directory>
            </resource>
            <resource>
                <directory>src/main/resources/views</directory>
            </resource>
            <resource>
                <directory>src/main/resources/views/summary</directory>
            </resource>
            <resource>
                <directory>src/main/resources/views/members</directory>
            </resource>
            <resource>
                <directory>src/main/resources/views/admins</directory>
            </resource>
            <resource>
                <directory>src/main/resources/views/check-in</directory>
            </resource>
        </resources>

        <plugins>
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mavenCompiler.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${mavenResources.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-maven-plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafxMaven.version}</version>
                <configuration>
                    <noHeaderFiles>true</noHeaderFiles>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <mainClass>${mainClass}</mainClass>
                    <launcher>launcher</launcher>
                    <compress>1</compress>
                    <jlinkZipName>armstrong-desktop</jlinkZipName>
                    <jlinkImageName>${project.groupId}-${project.artifactId}:${project.version}</jlinkImageName>
                    <options>
                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                    </options>
                </configuration>
            </plugin>

            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${mavenShade.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <outputFile>build/${project.artifactId}-${project.version}.jar</outputFile>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Main-Class>${mainClass.jar}</Main-Class>
                                        <Name>${project.artifactId}</Name>
                                        <Specification-Title>Armstrong Desktop, a gym system management</Specification-Title>
                                        <Specification-Version>${project.version}</Specification-Version>
                                        <Specification-Vendor>${project.groupId}</Specification-Vendor>
                                        <Implementation-Title>${project.artifactId}</Implementation-Title>
                                        <Implementation-Version>${project.version}</Implementation-Version>
                                        <Implementation-Vendor>${project.groupId}</Implementation-Vendor>
                                        <Build-Date>${maven.build.timestamp}</Build-Date>
                                    </manifestEntries>
                                </transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>